[metadata]
name = python-sample-cc
version = 0.0.0
author = ADI10HERO
url = http://www.github.com/ADI10HERO/
description = My Package does something very interesting
license = MIT License 
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Topic :: System :: Archiving :: Packaging

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
